<resources>
    <string name="app_name">"Convo Mail"</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_email_detail_view">""</string>
    <string name="subject">Subject</string>
    <string name="address">address</string>
    <string name="todo">TODO</string>
    <string name="date">date</string>
    <string name="content">Content</string>
    <string name="view_attachment">View Attachment</string>
</resources>
