<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/MyToolbarTheme"
    tools:context="com.example.convomail.EmailDetailView">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:theme="@style/MyToolbarTheme">
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/MyToolbarTheme" />
        <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:padding="20dp"
        android:text="@string/subject"
        android:textColorHighlight="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.09"
            android:contentDescription="@string/todo"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:srcCompat="@mipmap/person" />

        <TextView
            android:id="@+id/fromAddr"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:padding="4dp"
            android:paddingLeft="5dp"
            android:text="@string/address"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date1"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:padding="20dp"
            android:text="@string/date" />

    </LinearLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:text="@string/content"
        android:textSize="17sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/attachment"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_below="@+id/content"
        android:onClick="viewAttachment"
        android:text="@string/view_attachment"
        android:visibility="gone" />
    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:scaleX="1"
        android:scaleY="1"
        android:visibility="gone" />

</RelativeLayout>